fix side nav spacing for EI11

--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,7 @@ side nav
 
 #side-nav-menu-img {
   padding-top: 18px;
+  height: 200px;
 }
 
 #side-nav-menu-img img {
